# just_gtfs

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  just_gtfs.h
.github/workflows/: ccpp.yml  cla.yml
docs/: CPP_STYLE.md
include/just_gtfs/: just_gtfs.h
signatures/version1/: cla.json
tests/: CMakeLists.txt  unit_tests.cpp
tests/data/output_feed/: agency.txt  shapes.txt
tests/data/sample_feed/: attributions.txt  fare_attributes.txt  feed_info.txt  levels.txt  pathways.txt  shapes.txt  transfers.txt  translations.txt
